# AdvancedAlgorithmsAndParallelProgramming

./: .gitignore  advanced algorithms and parallel programming.tex
Challenge42/1/: CMakeLists.txt  binary_search.cpp  matrix.cpp  matrix.h  power.cpp  strassen.cpp  vector.cpp  vector.h
Challenge42/1/videos/: AAPP_Chall42_1.drp  strasses_result.mkv
